--- a/ThirdProject-QuizApp/app/src/main/AndroidManifest.xml
+++ b/ThirdProject-QuizApp/app/src/main/AndroidManifest.xml
@@ -16,6 +16,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".DartsQuiz"
+            android:parentActivityName=".MainActivity">
+
+        </activity>
     </application>
 
 </manifest>
