--- a/FifthProject-TourGuideApp/app/src/main/AndroidManifest.xml
+++ b/FifthProject-TourGuideApp/app/src/main/AndroidManifest.xml
@@ -4,9 +4,8 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/ic_launcher_bulgaria"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
@@ -19,6 +18,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".ItemActivity" />
     </application>
 
 </manifest>
